--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,80 @@
 *{
-    background-color: white;
+    margin: 0;
+    padding: 0;
+    background-color: #F5F5F5;
     font-family: Helvetica;
     color: lightslategray;
 }
 
 h1{
     text-align: center;
+    padding: 20px;
 }
 
 hr{
-    border: 30px solid mediumseagreen;
+    border: 20px solid mediumseagreen;
+}
+
+.recipe-cards{
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 300px;
+    border-radius: 5px;
+    margin: 20px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+  .card-image {
+      border-radius: 5px 5px 0 0;
+  }
+  
+  .container {
+    padding: 10px;
+  }
+
+  a {
+      text-decoration: none;
+  }
+
+.recipe {
+    padding: 20px;
 }
 
 h2 {
     text-align: center;
 }
 
-h4 {
+h4, li::marker {
     color: mediumseagreen;
 }
 
-li::marker {
-    color: mediumseagreen;
+img {
+    width: 300px;
+    height: 300px;
 }
+
+.home-button {
+    background-color: mediumseagreen; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.home-button:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
